2005-08-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/set.c (set_tics): Fix non-ANSI ordering of declaration.

2005-08-05  Ethan Merritt  <merritt@u.washington.edu>

	* demo/starmap.dem: Change style slightly for use with webify.

	* demo/html/index.save: Add tics demo.
	
	* demo/html/webify.pl: Use in-tree gnuplot executable, if available.

2005-08-05  Harald Harders  <h.harders@tu-bs.de>

	SF patch [1245558] Different ticscale and ticpos for different axes

	* NEWS docs/gnuplot.doc src/axis.c src/axis.h src/color.c src/graph3d.c
	src/graphics.c src/save.c src/set.c src/show.c src/term.c src/unset.c
	demo/all.dem demo/tics.dem demo/html/Makefile: This patch enables the
	user to specify different ticscales and tic-positions for each axis:
	- new: "set tics" can change most settings for {x|y|z|cb}tics at once;
	- new: tic scale can be set per axis using "set {x|y|z|cb}tics scale";
	- change: "set ticsscale" is deprecated, use "set tics scale" instead.

2005-08-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c(store_label get_data)  src/plot3d.c (get_3ddata):
	For 'plot with labels', instead of treating a missing label as an
	undefined point, treat it as a blank label. That allows putting a
	point on the plot even if there is no label to go with it.
	Bug #1251922.

	* src/datafile.c: Better fix for mis-match of column header to column
	values in the case of `set style histogram errorbars` with
	`set key autotitle columnheader`. Supersedes 2005-07-30 patch.

2005-08-04  Bastian Maerkisch  <bmaerkisch@web.de>

	SF patch [1233984] Directory selection dialog for Win32

	* src/win/wgnuplot.mnu src/win/wmenu.c: Add new directory selection
	dialog to Win32 platform. If SHELL_DIR_DIALOG is defined the common
	directory dialog of the windows shell is used. Otherwise a modified
	version of the common file open dialog is used. The new code is only
	active if WITH_ADV_DIR_DIALOG is defined.

	* src/win/wcommon.h: Make the new directory dialog the default by